add Restuarant/Index.cshtml file
Co-authored-by: Fatma Dogan <fceyda@gmail.com>
Co-auatored-by: Jieun Kang <jieunkang101@gmail.com>
Co-authored-by: Kristina Hengster Tintor <hengster.tintor@gmail.com>

--- a/BestRestaurants/Views/Restaurants/Create.cshtml
+++ b/BestRestaurants/Views/Restaurants/Create.cshtml
@@ -16,6 +16,6 @@
     @Html.LabelFor(model => model.Cuisine)
     @Html.DropDownList("CuisineId")
 
-    <input type="submit" value="Add new restuarant"  class="btn btn-default" />
+    <input type="submit" value="Add new restaurant"  class="btn btn-default" />
 }
-<p>@Html.ActionLink("Show all restuarants", "Index")</p>
+<p>@Html.ActionLink("Show all restaurants", "Index")</p>
