--- a/BestRestaurants/Views/Restaurants/Index.cshtml
+++ b/BestRestaurants/Views/Restaurants/Index.cshtml
@@ -5,12 +5,13 @@
 @using BestRestaurants.Models;
 @model List<BestRestaurants.Models.Restaurant>;
 
-<h1>Restaurants</h1>
+<h1>Restuarants</h1>
 
 @if (@Model.Count == 0)
 {
-  <h3>No Restaurant have been added yet!</h3>
+  <h3>No restuarants have been added yet!</h3>
 } 
+
 
 @foreach (Restaurant restaurant in Model)
 {
@@ -18,3 +19,4 @@
 }
 
 <p>@Html.ActionLink("Add new restaurant", "Create")</p>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
