--- a/BestRestaurants/Views/Cuisines/Details.cshtml
+++ b/BestRestaurants/Views/Cuisines/Details.cshtml
@@ -17,7 +17,7 @@
 
 @foreach (Restaurant restaurant in @Model.Restaurants)
 {
-  <li>Description: @restaurant.Description</li>
+  <li>Restaurant: @restaurant.Name | Description: @restaurant.Description</li>
 }
 </ul>
 
