--- a/BestRestaurants/Views/Home/Index.cshtml
+++ b/BestRestaurants/Views/Home/Index.cshtml
@@ -5,3 +5,4 @@
 <h1>Welcome to the Best Restaurants List!</h1>
 <p>@Html.ActionLink("See all restaurants", "Index", "Restaurants")</p> 
 <p>@Html.ActionLink("See all cuisine", "Index", "Cuisines")</p> 
+<p>@Html.ActionLink("Show all reviews", "Index", "Reviews")</p>
